[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/heart.png" type="Texture" id=1]
[ext_resource path="res://Game/PlayerPanel.gd" type="Script" id=2]
[ext_resource path="res://Assets/Icons/Attack_Icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/Coin_Icon.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/Speed_Icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Icons/Range_Icon.png" type="Texture" id=6]
[ext_resource path="res://Assets/Icons/Shield_Icon.png" type="Texture" id=7]

[node name="PlayerPanel" type="PanelContainer"]
margin_right = 233.0
margin_bottom = 298.0
rect_pivot_offset = Vector2( -288, -82 )
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 226.0
margin_bottom = 291.0
custom_constants/margin_top = 5
custom_constants/margin_left = 5

[node name="PlayerContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 219.0
margin_bottom = 284.0

[node name="Health" type="HBoxContainer" parent="MarginContainer/PlayerContainer"]
margin_right = 214.0
margin_bottom = 14.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.06

[node name="HeartContainer" type="HBoxContainer" parent="MarginContainer/PlayerContainer/Health"]
margin_right = 164.0
margin_bottom = 14.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="P1Hearts" type="TextureRect" parent="MarginContainer/PlayerContainer/Health/HeartContainer"]
margin_right = 10.0
margin_bottom = 14.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts2" type="TextureRect" parent="MarginContainer/PlayerContainer/Health/HeartContainer"]
margin_left = 14.0
margin_right = 24.0
margin_bottom = 14.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts3" type="TextureRect" parent="MarginContainer/PlayerContainer/Health/HeartContainer"]
margin_left = 28.0
margin_right = 38.0
margin_bottom = 14.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts4" type="TextureRect" parent="MarginContainer/PlayerContainer/Health/HeartContainer"]
margin_left = 42.0
margin_right = 52.0
margin_bottom = 14.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts5" type="TextureRect" parent="MarginContainer/PlayerContainer/Health/HeartContainer"]
margin_left = 56.0
margin_right = 66.0
margin_bottom = 14.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts6" type="TextureRect" parent="MarginContainer/PlayerContainer/Health/HeartContainer"]
margin_left = 70.0
margin_right = 80.0
margin_bottom = 14.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts7" type="TextureRect" parent="MarginContainer/PlayerContainer/Health/HeartContainer"]
margin_left = 84.0
margin_right = 94.0
margin_bottom = 14.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts8" type="TextureRect" parent="MarginContainer/PlayerContainer/Health/HeartContainer"]
margin_left = 98.0
margin_right = 108.0
margin_bottom = 14.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts9" type="TextureRect" parent="MarginContainer/PlayerContainer/Health/HeartContainer"]
margin_left = 112.0
margin_right = 122.0
margin_bottom = 14.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts10" type="TextureRect" parent="MarginContainer/PlayerContainer/Health/HeartContainer"]
margin_left = 126.0
margin_right = 136.0
margin_bottom = 14.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts11" type="TextureRect" parent="MarginContainer/PlayerContainer/Health/HeartContainer"]
margin_left = 140.0
margin_right = 150.0
margin_bottom = 14.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts12" type="TextureRect" parent="MarginContainer/PlayerContainer/Health/HeartContainer"]
margin_left = 154.0
margin_right = 164.0
margin_bottom = 14.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shield" type="TextureRect" parent="MarginContainer/PlayerContainer/Health"]
visible = false
margin_left = 168.0
margin_right = 214.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="NameLabel" type="Label" parent="MarginContainer/PlayerContainer"]
margin_top = 18.0
margin_right = 214.0
margin_bottom = 32.0
text = "Name: "

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PlayerContainer"]
margin_top = 36.0
margin_right = 214.0
margin_bottom = 279.0
size_flags_vertical = 3

[node name="P1ClassSprite" type="TextureRect" parent="MarginContainer/PlayerContainer/HBoxContainer"]
margin_bottom = 243.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInfo" type="VBoxContainer" parent="MarginContainer/PlayerContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 214.0
margin_bottom = 243.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IconStats" type="HBoxContainer" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo"]
margin_right = 210.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Coins" type="HBoxContainer" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo/IconStats"]
margin_right = 49.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="CoinIcon" type="TextureRect" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo/IconStats/Coins"]
margin_right = 22.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Coins" type="Label" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo/IconStats/Coins"]
margin_left = 26.0
margin_right = 49.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"
valign = 1

[node name="Attack" type="HBoxContainer" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo/IconStats"]
margin_left = 53.0
margin_right = 103.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="AttackIcon" type="TextureRect" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo/IconStats/Attack"]
margin_right = 23.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Attack" type="Label" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo/IconStats/Attack"]
margin_left = 27.0
margin_right = 50.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"
valign = 1

[node name="Range" type="HBoxContainer" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo/IconStats"]
margin_left = 107.0
margin_right = 156.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="RangeIcon" type="TextureRect" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo/IconStats/Range"]
margin_right = 18.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.67
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Range" type="Label" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo/IconStats/Range"]
margin_left = 22.0
margin_top = 7.0
margin_right = 49.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "0"

[node name="Speed" type="HBoxContainer" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo/IconStats"]
margin_left = 160.0
margin_right = 210.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpeedIcon" type="TextureRect" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo/IconStats/Speed"]
margin_right = 18.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.65
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Speed" type="Label" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo/IconStats/Speed"]
margin_left = 22.0
margin_right = 50.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"
valign = 1

[node name="Score" type="Label" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo"]
margin_top = 32.0
margin_right = 210.0
margin_bottom = 60.0
size_flags_vertical = 3
text = "Score:"

[node name="Item" type="Label" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo"]
margin_top = 64.0
margin_right = 210.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
text = "Item:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActiveItem" type="Label" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo"]
margin_top = 139.0
margin_right = 210.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
text = "Active Item:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnsLeft" type="Label" parent="MarginContainer/PlayerContainer/HBoxContainer/PlayerInfo"]
margin_top = 221.0
margin_right = 210.0
margin_bottom = 235.0
size_flags_vertical = 6
__meta__ = {
"_edit_use_anchors_": false
}
